using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constants : MonoBehaviour
{
    public const string TAG_PLAYER = "Player";

    public const string TAG_BOT = "Bot";

    public const string TAG_ANIM_IDLE = "Idle";

    public const string TAG_ANIM_RUN = "Run";

    public const string TAG_ANIM_ATTACK = "Attack";


}
